DarkMode_LightMode html part update

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>DarkMode_LightMode</title>
 </head>
 <body>
+    <input type="checkbox" id="dark-mode">
+    <label for="dark-mode">
+        <div class="switch"></div>
+    </label>
     
 </body>
 </html>
