darkMode_lightMode css part update

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <input type="checkbox" id="dark-mode">
-    <label for="dark-mode">
+    <label class="label" for="dark-mode">
         <div class="switch"></div>
     </label>
     
