--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     <title>DarkMode_LightMode</title>
 </head>
 <body>
-    <input type="checkbox" id="dark-mode">
+    <input type="checkbox" id="input">
     <label class="label" for="dark-mode">
         <div class="switch"></div>
     </label>
     
+
+    <script src="/index.js"></script>
 </body>
 </html>
