--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>DarkMode_LightMode</title>
 </head>
 <body>
-    <input type="checkbox" id="input">
+    <input type="checkbox" id="dark-mode">
     <label class="label" for="dark-mode">
         <div class="switch"></div>
     </label>
